<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        android:gravity="center"
        android:textSize="36sp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/blue_dark"
        app:layout_constraintTop_toBottomOf="@+id/view"/>


    <TextView
        android:id="@+id/tv_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="name"
        android:drawablePadding="3dp"
        android:textStyle="bold"
        android:background="@drawable/rounded_corner"
        android:padding="16dp"
        android:layout_marginHorizontal="32dp"
        tools:text="@string/dummy_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_profile"
        app:drawableStartCompat="@drawable/baseline_email_24" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="name"
        android:drawablePadding="3dp"
        android:textStyle="bold"
        android:background="@drawable/rounded_corner"
        android:padding="16dp"
        tools:text="@string/dummy_name"
        app:layout_constraintEnd_toEndOf="@+id/tv_email"
        app:layout_constraintStart_toStartOf="@+id/tv_email"
        app:layout_constraintTop_toBottomOf="@+id/tv_email"
        app:drawableStartCompat="@drawable/baseline_person_2_24" />

    <TextView
        android:id="@+id/tv_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="phone"
        android:drawablePadding="3dp"
        android:textStyle="bold"
        android:background="@drawable/rounded_corner"
        android:padding="16dp"
        tools:text="@string/dummy_phone"
        app:layout_constraintEnd_toEndOf="@+id/tv_name"
        app:layout_constraintStart_toStartOf="@+id/tv_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_name"
        app:drawableStartCompat="@drawable/baseline_phone_2_24" />
    <TextView
        android:id="@+id/tv_province"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="phone"
        android:drawablePadding="3dp"
        android:textStyle="bold"
        android:background="@drawable/rounded_corner"
        android:padding="16dp"
        tools:text="@string/dummy_province"
        app:layout_constraintEnd_toEndOf="@+id/tv_phone"
        app:layout_constraintStart_toStartOf="@+id/tv_phone"
        app:layout_constraintTop_toBottomOf="@+id/tv_phone"
        app:drawableStartCompat="@drawable/baseline_location_on_24" />

    <TextView
        android:id="@+id/tv_fav_event"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="phone"
        android:drawablePadding="3dp"
        android:textStyle="bold"
        android:background="@drawable/rounded_corner"
        android:padding="16dp"
        tools:text="@string/dummy_fav_event"
        app:layout_constraintEnd_toEndOf="@+id/tv_province"
        app:layout_constraintStart_toStartOf="@+id/tv_province"
        app:layout_constraintTop_toBottomOf="@+id/tv_province"
        app:drawableStartCompat="@drawable/baseline_favorite_24" />

    <Button
        android:id="@+id/btn_partner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="32dp"
        android:padding="12dp"
        android:text="@string/be_our_partner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_fav_event" />

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/red"
        android:padding="12dp"
        android:text="@string/logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_partner" />

</androidx.constraintlayout.widget.ConstraintLayout>