<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">
    <ImageView
        android:id="@+id/iv_story_image"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:contentDescription="@string/desi_image"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/dummy_event_image" />

    <RelativeLayout
        android:id="@+id/price_and_fav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_story_image">

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:textColor="@color/blue_dark"
            android:textSize="32sp"
            android:textStyle="bold"
            tools:text="@string/dummy_event_price" />

        <ToggleButton
            android:id="@+id/toggle_favorite"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="22dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/favorite_toggle"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:text="ToggleButton"
            android:textOff=""
            android:textOn="" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_event_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/price_and_fav"
        app:layout_constraintTop_toBottomOf="@+id/price_and_fav"
        tools:text="Happy Fest" />

    <TextView
        android:id="@+id/tv_event_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:transitionName="description"
        app:layout_constraintStart_toStartOf="@+id/tv_event_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_event_name"
        tools:text="@string/dummy_desc" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/berminat"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tv_event_description"
        app:layout_constraintStart_toStartOf="@+id/tv_event_description"
        app:layout_constraintTop_toBottomOf="@+id/tv_event_description" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <ImageView
            android:id="@+id/btn_gmail"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="120dp"
            android:src="@drawable/gmail_logo" />

        <ImageView
            android:id="@+id/btn_wa"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="120dp"
            android:src="@drawable/wa_logo" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>