<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        android:gravity="center"
        android:textSize="36sp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/blue_dark"
        app:layout_constraintTop_toBottomOf="@+id/view"/>


    <com.example.eventmu.custom_view.EmailEditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_corner"
        android:padding="16dp"
        android:textStyle="bold"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_register" />

    <com.example.eventmu.custom_view.PasswordEditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        android:background="@drawable/rounded_corner"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="name"
        android:drawableStart="@drawable/baseline_person_2_24"
        android:drawablePadding="3dp"
        android:textStyle="bold"
        android:background="@drawable/rounded_corner"
        android:padding="16dp"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/et_password"
        app:layout_constraintStart_toStartOf="@+id/et_password"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <EditText
        android:id="@+id/et_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="phone"
        android:drawableStart="@drawable/baseline_phone_2_24"
        android:drawablePadding="3dp"
        android:textStyle="bold"
        android:background="@drawable/rounded_corner"
        android:padding="16dp"
        android:hint="@string/phone_number"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="@+id/et_name"
        app:layout_constraintStart_toStartOf="@+id/et_name"
        app:layout_constraintTop_toBottomOf="@+id/et_name" />

<!--    <RelativeLayout-->
<!--        android:id="@+id/et_province"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="16dp"-->
<!--        android:autofillHints="name"-->
<!--        android:background="@drawable/rounded_corner"-->
<!--        android:padding="16dp"-->
<!--        app:layout_constraintEnd_toEndOf="@+id/et_phone"-->
<!--        app:layout_constraintStart_toStartOf="@+id/et_phone"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/et_phone">-->

<!--        &lt;!&ndash; Text Label &ndash;&gt;-->
<!--        <TextView-->
<!--            android:drawablePadding="3dp"-->
<!--            android:textStyle="bold"-->
<!--            android:textSize="16sp"-->
<!--            android:layout_width="fill_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/province"-->
<!--            app:drawableStartCompat="@drawable/baseline_location_on_24" />-->
<!--        &lt;!&ndash; Spinner Element &ndash;&gt;-->
<!--        <Spinner-->
<!--            android:id="@+id/province_spinner"-->
<!--            android:layout_width="fill_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:prompt="Spinner" />-->
<!--    </RelativeLayout>-->

<!--    <RelativeLayout-->
<!--        android:id="@+id/et_fav_event"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="16dp"-->
<!--        android:autofillHints="name"-->
<!--        android:background="@drawable/rounded_corner"-->
<!--        android:padding="16dp"-->
<!--        app:layout_constraintEnd_toEndOf="@+id/et_province"-->
<!--        app:layout_constraintStart_toStartOf="@+id/et_province"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/et_province">-->

<!--        &lt;!&ndash; Text Label &ndash;&gt;-->
<!--        <TextView-->
<!--            android:drawablePadding="3dp"-->
<!--            android:textStyle="bold"-->
<!--            android:textSize="16sp"-->
<!--            android:layout_width="fill_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/favorite_event"-->
<!--            app:drawableStartCompat="@drawable/baseline_favorite_24" />-->
<!--        &lt;!&ndash; Spinner Element &ndash;&gt;-->
<!--        <Spinner-->
<!--            android:id="@+id/favorite_spinner"-->
<!--            android:layout_width="fill_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:prompt="Spinner"-->
<!--            tools:ignore="HardcodedText" />-->
<!--    </RelativeLayout>-->

<!--    <Button-->
<!--        android:id="@+id/btn_register"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginHorizontal="32dp"-->
<!--        android:layout_marginTop="32dp"-->
<!--        android:padding="12dp"-->
<!--        android:text="@string/register"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/et_fav_event" />-->

    <LinearLayout
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blue_dark"
            android:layout_marginStart="8dp"
            android:text="@string/login" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>